// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component :: Character renders a burrowed character component 1`] = `
<div
  className="chick down is-burrowed"
  data-is="character"
/>
`;

exports[`Component :: Character renders a character component 1`] = `
<div
  className="fox up "
  data-is="character"
/>
`;
